A paragraph has been added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>This is a basic Git Tutorial</h1>
+    <p>This paragraph is part of 2nd push</p>
     <script src="Script.js"></script>
 </body>
 </html>
